Fixing alignment.

--- a/index.css
+++ b/index.css
@@ -146,7 +146,7 @@ iframe {
     }
 
     main {
-        position: absolute;
+        position: relative;
         height: 100vh;
         width: 80vw;
         left: 20vw;
@@ -159,11 +159,13 @@ iframe {
     }
 
     section {
+        margin: 0;
         position: absolute;
         top: 50%;
         left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%)
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        width: 100%;
     }
 
     p {
